--- a/index.html
+++ b/index.html
@@ -42,31 +42,30 @@
     nav button:hover, nav button.active {
       background: #d0e0ff;
     }
-    .subtabs {
+    .subtabs, .tab-content {
       display: none;
-      background: #f0f0f0;
-      padding: 10px;
-      border-bottom: 1px solid #ccc;
+      padding: 20px;
     }
-    .subtabs button {
-      margin-right: 10px;
-      padding: 8px;
-      background: #ddd;
-      border: none;
-      cursor: pointer;
-    }
-    .subtabs button.active {
-      background: #b3ccff;
+    .tab-content.active {
+      display: block;
     }
     iframe {
       width: 100%;
-      height: calc(100vh - 180px);
+      height: calc(100vh - 130px);
       border: none;
     }
-    audio {
+    .audio-buttons {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      padding: 20px;
+    }
+    .audio-section {
+      display: none;
+      text-align: center;
+    }
+    .audio-section.active {
       display: block;
-      margin: 10px auto;
-      width: 90%;
     }
   </style>
 </head>
@@ -77,85 +76,54 @@
   </header>
 
   <nav>
-    <button onclick="loadTab('induction')" id="tab-induction" class="active">Induction</button>
-    <button onclick="loadTab('ppeInventory')" id="tab-ppeInventory">PPE Inventory</button>
-    <button onclick="loadTab('ppeForm')" id="tab-ppeForm">PPE Issue & Return</button>
+    <button onclick="showTab('induction')" id="tab-induction" class="active">Induction</button>
+    <button onclick="showTab('voiceover')" id="tab-voiceover">Induction Voice Over</button>
+    <button onclick="showTab('ppeInventory')" id="tab-ppeInventory">PPE Inventory</button>
+    <button onclick="showTab('ppeForm')" id="tab-ppeForm">PPE Issue & Return</button>
   </nav>
 
-  <!-- Subtabs -->
-  <div id="subtabs-induction" class="subtabs" style="display: block;">
-    <button onclick="loadInductionAudio('cn')" id="subtab-cn" class="active">Chinese Voice</button>
-    <button onclick="loadInductionAudio('vn')" id="subtab-vn">Vietnamese Voice</button>
+  <div id="content-induction" class="tab-content active">
+    <iframe src="https://epailxi.github.io/EPGNTPINDUCTION/"></iframe>
   </div>
 
-  <div id="subtabs-ppeForm" class="subtabs">
-    <button onclick="loadSubTab('issue')" id="subtab-issue" class="active">Issue & Return</button>
-    <button onclick="loadSubTab('search')" id="subtab-search">Search</button>
+  <div id="content-voiceover" class="tab-content">
+    <div class="audio-buttons">
+      <button onclick="playAudio('chinese')">▶ Chinese Voice Over</button>
+      <button onclick="playAudio('vietnamese')">▶ Vietnamese Voice Over</button>
+    </div>
+    <div id="chinese" class="audio-section">
+      <audio controls src="Chinese voice over induction H .mp3"></audio>
+    </div>
+    <div id="vietnamese" class="audio-section">
+      <audio controls src="Vietnam voice over induction H .mp3"></audio>
+    </div>
   </div>
 
-  <!-- Content -->
-  <iframe id="contentFrame" src="https://epailxi.github.io/EPGNTPINDUCTION/"></iframe>
-  <audio id="voicePlayer" controls src="Chinese voice over induction H .mp3"></audio>
+  <div id="content-ppeInventory" class="tab-content">
+    <iframe src="https://twswzvv3ark.sg.feishu.cn/file/EJDJbsCNZoMoRIx2wujlpazVgDh"></iframe>
+  </div>
+
+  <div id="content-ppeForm" class="tab-content">
+    <iframe src="https://twswzvv3ark.sg.feishu.cn/share/base/form/shrlgLgnuhFnHx9HmffMoKyrfjf"></iframe>
+  </div>
 
   <script>
-    function clearActiveTabs() {
+    function showTab(tabName) {
       document.querySelectorAll("nav button").forEach(btn => btn.classList.remove("active"));
-      document.querySelectorAll(".subtabs button").forEach(btn => btn.classList.remove("active"));
+      document.getElementById("tab-" + tabName).classList.add("active");
+
+      document.querySelectorAll(".tab-content").forEach(tab => tab.classList.remove("active"));
+      document.getElementById("content-" + tabName).classList.add("active");
+
+      // Hide audio on tab switch
+      document.querySelectorAll(".audio-section").forEach(el => el.classList.remove("active"));
     }
 
-    function hideAllSubtabs() {
-      document.querySelectorAll(".subtabs").forEach(sub => sub.style.display = "none");
-    }
-
-    function loadTab(tab) {
-      clearActiveTabs();
-      hideAllSubtabs();
-
-      if (tab === 'induction') {
-        document.getElementById('tab-induction').classList.add("active");
-        document.getElementById('subtabs-induction').style.display = "block";
-        loadInductionAudio('cn');
-      } else if (tab === 'ppeInventory') {
-        document.getElementById('tab-ppeInventory').classList.add("active");
-        document.getElementById('contentFrame').src = "https://twswzvv3ark.sg.feishu.cn/file/EJDJbsCNZoMoRIx2wujlpazVgDh";
-        document.getElementById('voicePlayer').style.display = "none";
-      } else if (tab === 'ppeForm') {
-        document.getElementById('tab-ppeForm').classList.add("active");
-        document.getElementById('subtabs-ppeForm').style.display = "block";
-        loadSubTab('issue');
-      }
-    }
-
-    function loadSubTab(subtab) {
-      document.getElementById('subtab-issue').classList.remove("active");
-      document.getElementById('subtab-search').classList.remove("active");
-      document.getElementById('voicePlayer').style.display = "none";
-
-      if (subtab === 'issue') {
-        document.getElementById('subtab-issue').classList.add("active");
-        document.getElementById('contentFrame').src = "https://twswzvv3ark.sg.feishu.cn/share/base/form/shrlgLgnuhFnHx9HmffMoKyrfjf";
-      } else if (subtab === 'search') {
-        document.getElementById('subtab-search').classList.add("active");
-        document.getElementById('contentFrame').src = "https://twswzvv3ark.sg.feishu.cn/share/base/query/shrlgX74PkvggRvBLlfoFwKzXtZ";
-      }
-    }
-
-    function loadInductionAudio(lang) {
-      document.getElementById('subtab-cn').classList.remove("active");
-      document.getElementById('subtab-vn').classList.remove("active");
-
-      if (lang === 'cn') {
-        document.getElementById('subtab-cn').classList.add("active");
-        document.getElementById('contentFrame').src = "https://epailxi.github.io/EPGNTPINDUCTION/";
-        document.getElementById('voicePlayer').src = "Chinese voice over induction H .mp3";
-        document.getElementById('voicePlayer').style.display = "block";
-      } else if (lang === 'vn') {
-        document.getElementById('subtab-vn').classList.add("active");
-        document.getElementById('contentFrame').src = "https://epailxi.github.io/EPGNTPINDUCTION/";
-        document.getElementById('voicePlayer').src = "Vietnam voice over induction H .mp3";
-        document.getElementById('voicePlayer').style.display = "block";
-      }
+    function playAudio(language) {
+      document.querySelectorAll(".audio-section").forEach(el => el.classList.remove("active"));
+      document.getElementById(language).classList.add("active");
     }
   </script>
+
 </body>
 </html>
