--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     .tab-content, .subtab-content { display:none; }
     .tab-content.active, .subtab-content.active { display:block; }
     iframe { width:100%; height:calc(100vh - 170px); border:none; }
+
     .audio-buttons {
       display:flex; gap:20px; justify-content:center; padding:20px; flex-wrap:wrap;
     }
     .audio-section { display:none; text-align:center; }
     .audio-section.active { display:block; }
+
     .subtabs {
       display: flex;
       justify-content: center;
@@ -38,6 +40,31 @@
     }
     .subtabs button:hover, .subtabs button.active {
       background: #d0e0ff;
+    }
+
+    .loader {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 40px;
+      font-size: 16px;
+      color: #333;
+    }
+
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid #ccc;
+      border-top: 4px solid #004d99;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-bottom: 10px;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
@@ -103,13 +130,7 @@
       contents.forEach(div => {
         if (div.id === `content-${tabName}`) {
           div.classList.add("active");
-          if (!div.dataset.loaded && div.dataset.url) {
-            const iframe = document.createElement("iframe");
-            iframe.src = div.dataset.url;
-            iframe.loading = "lazy";
-            div.appendChild(iframe);
-            div.dataset.loaded = "true";
-          }
+          loadIframeIfNeeded(div);
         } else {
           div.classList.remove("active");
         }
@@ -127,7 +148,7 @@
     });
   });
 
-  // Handle subtabs under PPE Issue & Return
+  // Subtab logic
   const subtabButtons = document.querySelectorAll(".subtabs button");
   const subcontents = document.querySelectorAll(".subtab-content");
 
@@ -141,19 +162,31 @@
       subcontents.forEach(div => {
         if (div.id === `subcontent-${sub}`) {
           div.classList.add("active");
-          if (!div.dataset.loaded && div.dataset.url) {
-            const iframe = document.createElement("iframe");
-            iframe.src = div.dataset.url;
-            iframe.loading = "lazy";
-            div.appendChild(iframe);
-            div.dataset.loaded = "true";
-          }
+          loadIframeIfNeeded(div);
         } else {
           div.classList.remove("active");
         }
       });
     });
   });
+
+  // Lazy iframe + loader
+  function loadIframeIfNeeded(container) {
+    if (container.dataset.loaded || !container.dataset.url) return;
+
+    const loader = document.createElement("div");
+    loader.className = "loader";
+    loader.innerHTML = `<div class="spinner"></div><div>Please wait ~5 seconds...</div>`;
+    container.appendChild(loader);
+
+    const iframe = document.createElement("iframe");
+    iframe.src = container.dataset.url;
+    iframe.loading = "lazy";
+    iframe.onload = () => loader.remove();
+
+    container.appendChild(iframe);
+    container.dataset.loaded = "true";
+  }
 </script>
 
 </body>
