--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
     </div>
     <div id="chinese" class="audio-section">
       <audio preload="none" controls>
-        <source src="Chinese-voice-over-induction-H.mp3" type="audio/mpeg">
+        <source src="Chinese voice over induction H.mp3" type="audio/mpeg">
       </audio>
     </div>
     <div id="vietnamese" class="audio-section">
       <audio preload="none" controls>
-        <source src="Vietnam-voice-over-induction-H.mp3" type="audio/mpeg">
+        <source src="Vietnam voice over induction H.mp3" type="audio/mpeg">
       </audio>
     </div>
     <div id="bangla" class="audio-section">
       <audio preload="none" controls>
-        <source src="Bangla-voice-over-induction-H.mp3" type="audio/mpeg">
+        <source src="Bangla voice over induction H.mp3" type="audio/mpeg">
       </audio>
     </div>
   </div>
